# PocCMU

./: CMakeLists.txt  a.out  main.cpp  test.py
includes/CMU/: cmu.hpp
includes/Communication/: Modes.hpp  Requests.hpp  Result.hpp
includes/SML/: sml.hpp
includes/core/: Factory.hpp  core.hpp
includes/system/: Service.hpp  system.hpp
src/CMU/: cmu.cpp
src/Extra/: jsoncpp.cpp
src/SML/: sml.cpp
src/core/: Core.cpp  Factory.cpp
src/system/: Service.cpp  system.cpp
